syntax = "proto3";

package shared.proto.registry.v1;

option go_package = "github.com/loco-team/loco/shared/proto/registry/v1;registryv1";

message GitlabTokenRequest {}
message GitlabTokenResponse {
  string username = 1;
  string token = 2;
}

service RegistryService {
  rpc GitlabToken(GitlabTokenRequest) returns (GitlabTokenResponse) {}
}
